# RRRobot

./: .gitignore  .gitmodules  LICENSE  README.md  cv_model_architectures.py  docker-compose.yml  run_rrrobot_image.sh
docker_env/: docker-compose.yml
docker_env/gazebo/: Dockerfile  run_rrrobot_image.sh
docker_env/gear/: Dockerfile
docker_env/ros/: run_rrrobot_image.sh
docker_env/ros-dev/: Dockerfile  run_rrrobot_image.sh
docker_env/ros-turtlesim/: run_rrrobot_image.sh  turtlesim.sh
docker_env/warehouse/: Dockerfile
docs/: documentation.md  gear.md  home.md
rrrobot_src/: test.sh
rrrobot_src/src/arm_control/: CMakeLists.txt
rrrobot_src/src/arm_control/include/arm_control/: arm.h
rrrobot_src/src/arm_control/launch/: arm.launch
rrrobot_src/src/arm_control/src/: arm.cpp  arm_controller.cpp
rrrobot_src/src/arm_control/test/: arm_movement_demo.cpp  test.cpp  test_internal_arm_representation.cpp
rrrobot_src/src/gazebo_models/fanuc_robotic_arm/: model.sdf
rrrobot_src/src/gazebo_models/unit_box/: model.sdf
rrrobot_src/src/simulation_drivers/: build.sh
rrrobot_src/src/simulation_drivers/src/simulation_env/: CMakeLists.txt  package.xml
rrrobot_src/src/simulation_drivers/src/simulation_env/msg/: arm_command.msg
rrrobot_src/src/simulation_drivers/src/simulation_env/src/: arm_angle_sensor_plugin.cpp  arm_motors.cpp
rrrobot_src/src/simulation_drivers/src/simulation_env/test/: move_arm.cpp
rrrobot_src/src/simulation_env/msg/: arm_angles.msg
rrrobot_src/world/: rrrobot_setpoint.world
rrrobot_ws/: build.sh  setup.sh
rrrobot_ws/src/arm_control/: CMakeLists.txt  package.xml
rrrobot_ws/src/arm_control/include/arm_control/: arm.h
rrrobot_ws/src/arm_control/launch/: arm.launch
rrrobot_ws/src/arm_control/test/: angles_subscriber.cpp  test.cpp  test_internal_arm_representation.cpp  test_pub_sub.cpp
rrrobot_ws/src/gazebo_models/: model_mappings.txt
rrrobot_ws/src/gazebo_models/fanuc_robotic_arm/: model.config  model.sdf
rrrobot_ws/src/gazebo_models/fanuc_robotic_arm/meshes/: base_link.STL
rrrobot_ws/src/gazebo_models/fanuc_robotic_arm_with_gripper/meshes/: arm_link_1.STL
rrrobot_ws/src/gazebo_models/paper_bag/: model.config
rrrobot_ws/src/gazebo_models/plastic_bottle/: model.sdf
rrrobot_ws/src/gazebo_models/pop_can/: model.config  model.sdf
rrrobot_ws/src/gazebo_models/square_trash_can/: model.sdf
rrrobot_ws/src/gear/: sample_run.sh
rrrobot_ws/src/rrrobot/: CMakeLists.txt  package.xml
rrrobot_ws/src/rrrobot/config/: rrrobot.yaml  rrrobot_sensors.yaml
rrrobot_ws/src/rrrobot/scripts/: rrrobot_run.sh
rrrobot_ws/src/rrrobot/src/: cv_model.py  model_insertion_plugin.cpp  object_spawner_node.cpp  rrrobot_node.cpp
rrrobot_ws/src/rrrobot/test/: test_insert_object.cpp
rrrobot_ws/src/simulation_env/: CMakeLists.txt  package.xml
rrrobot_ws/src/simulation_env/msg/: arm_angles.msg
rrrobot_ws/src/simulation_env/src/: arm_angle_sensor_plugin.cpp  arm_motors.cpp  model_insertion_plugin.cpp
rrrobot_ws/src/simulation_env/test/: test_insert_object.cpp
rrrobot_ws/world/: gear.py  rrrobot.world  rrrobot_setpoint.world
src/: .env  docker-compose.yml  run_rrrobot_image.sh
src/ariac_ws/: build.sh
src/gazebo/: Dockerfile  build.sh  run_rrrobot_image.sh
src/gazebo/gazebo_models/fanuc_robotic_arm/: model.sdf
src/ros/: Dockerfile
src/ros-dev/: build.sh
src/ros-turtlesim/: Dockerfile  turtlesim.sh
src/rrrobot_ws/: build.sh  run_all.sh
src/rrrobot_ws/src/gazebo_models/: model_mappings.txt
src/rrrobot_ws/src/gazebo_models/fanuc_robotic_arm_with_gripper/: model.config  model.sdf
src/rrrobot_ws/src/gazebo_models/fanuc_robotic_arm_with_gripper/meshes/: arm_link_2.STL  arm_link_3.STL  arm_link_4.STL  arm_link_5.STL  arm_link_6.STL
src/rrrobot_ws/src/gazebo_models/generic_recyclable/: model.config  model.sdf
src/rrrobot_ws/src/gazebo_models/generic_trash/: model.config  model.sdf
src/rrrobot_ws/src/gazebo_models/paper_bag/: model.sdf
src/rrrobot_ws/src/gazebo_models/plastic_bottle/: model.sdf
src/rrrobot_ws/src/gazebo_models/plastic_bottle/meshes/: plastic_bottle.STL
src/rrrobot_ws/src/gazebo_models/pop_can/: model.sdf  original_5.stl
src/rrrobot_ws/src/gazebo_models/pringles/: model.config  model.sdf
src/rrrobot_ws/src/gazebo_models/square_trash_can/: model.config
src/rrrobot_ws/src/rrrobot/: CMakeLists.txt  package.xml
src/rrrobot_ws/src/rrrobot/config/: rrrobot.yaml  rrrobot_sensors.yaml
src/rrrobot_ws/src/rrrobot/include/: arm_representation.h  topic_names.h
src/rrrobot_ws/src/rrrobot/launch/: rrrobot.launch
src/rrrobot_ws/src/rrrobot/msg/: arm_command.msg
src/rrrobot_ws/src/rrrobot/scripts/: arm_home_position.sh  arm_pub_test.sh  arm_pub_test_continuous.sh  arm_test.sh  rrrobot_run.sh  rrrobot_run_no_build.sh
src/rrrobot_ws/src/rrrobot/src/: arm_controller_node.cpp  arm_representation.cpp  cv_model.py  depth_camera_node.cpp  image_display.py  model_insertion_plugin.cpp  object_spawner_node.cpp  rrrobot_node.cpp
src/rrrobot_ws/src/rrrobot/test/: test_arm.cpp  test_insert_object.cpp
src/rrrobot_ws/world/: gear.py  gear.world.template
