<?xml version="1.0"?>
<package format="2">
    <name>rrrobot</name>
    <version>1.0.0</version>
    <description>RRRobot package</description>
    <maintainer email="balajsra@umich.edu">Sravan Balaji</maintainer>
    <maintainer email="chenxgu@umich.edu">Chenxi Gu</maintainer>
    <maintainer email="thejakej@umich.edu">Jake Johnson</maintainer>
    <maintainer email="dwitcpa@umich.edu">Derek Witcpalek</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>osrf_gear</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_srvs</depend>
    <depend>trajectory_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>gazebo_ros</depend>
    <depend>message_generation</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversion</depend>
    <depend>gazebo</depend>
    <depend>PCL</depend>
    <depend>Eigen3</depend>
    <depend>orocos_kdl</depend>
    <exec_depend>message_runtime</exec_depend>

</package>